# gh-twilight

./: .gitignore  README.md  pyproject.toml  sparkle.toml
.github/workflows/: ci.yml
docs/: analysis.html  cli.html  commit.html  data.html  index.html  repo.html  sparkle.html
gh_twilight/: __init__.py  analysis.py  cli.py  commit.py  data.py  main.py  repo.py  sparkle.py
src/: commit.py  data.py  main.py  repo.py
tests/: test_gh_twilight.py
