[tool.poetry]
name = "gh-twilight"
version = "0.1.0"
description = "Analyze your growth as a software developer on GitHub with machine learning!"
authors = ["Marquis Kurt <software@marquiskurt.net>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
