[tool.poetry]
name = "gh-twilight"
version = "0.1.0"
description = "Predict a repository's size based on a contributor's commit history."
authors = ["Marquis Kurt <software@marquiskurt.net>"]
license = "MPL-2.0"

[tool.poetry.scripts]
start="gh_twilight:main"

[tool.poetry.dependencies]
python = ">=3.7"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
PyGithub = "^1.50"
scikit-learn = "^0.22.2"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.5.0"
pdoc3 = "0.7.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
